[Misc] Migrate xwiki-rendering-macro-ctsreport to JUnit 5 (#338)
(cherry picked from commit a37746fc569e45573f3984f5ed267a1bb954ec9f)