@@ -19,15 +19,15 @@
  */
 package org.xwiki.rendering.internal.macro.ctsreport;
 
-import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
 import org.apache.commons.lang3.tuple.Pair;
-import org.junit.Assert;
-import org.junit.Before;
+import org.junit.jupiter.api.BeforeEach;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
  * Unit tests for {@link ResultExtractor}.
@@ -35,15 +35,15 @@ import org.junit.Before;
  * @version $Id$
  * @since 4.1M2
  */
-public class ResultExtractorTest
+class ResultExtractorTest
 {
     private List<Result> results;
 
-    @Before
-    public void setUpResults()
+    @BeforeEach
+    void setUpResults()
     {
         TestParser parser = new TestParser();
-        this.results = Arrays.asList(
+        this.results = List.of(
             parser.parse("simple/italic/italic1 [xwiki/2.0, IN:.inout.txt, CTS:.inout.xml] - Passed"),
             parser.parse("simple/italic/italic1 [xwiki/2.1, IN:.inout.txt, CTS:.inout.xml] - Passed"),
             parser.parse("simple/bold/bold1 [xwiki/2.0, IN:.inout.txt, CTS:.inout.xml] - Passed"),
@@ -51,74 +51,73 @@ public class ResultExtractorTest
         );
     }
 
-    @org.junit.Test
-    public void extractByTestName()
+    @org.junit.jupiter.api.Test
+    void extractByTestName()
     {
         ResultExtractor extractor = new ResultExtractor();
         Set<String> testNames = extractor.extractByTestName(this.results);
 
-        Assert.assertEquals(2, testNames.size());
+        assertEquals(2, testNames.size());
         Iterator<String> it = testNames.iterator();
-        Assert.assertEquals("simple/bold/bold1", it.next());
-        Assert.assertEquals("simple/italic/italic1", it.next());
+        assertEquals("simple/bold/bold1", it.next());
+        assertEquals("simple/italic/italic1", it.next());
     }
 
-    @org.junit.Test
-    public void extractBySyntaxes()
+    @org.junit.jupiter.api.Test
+    void extractBySyntaxes()
     {
         ResultExtractor extractor = new ResultExtractor();
         Map<String, Pair<Set<Test>, Set<Test>>> tests = extractor.extractBySyntax(this.results);
 
-        Assert.assertEquals(2, tests.size());
+        assertEquals(2, tests.size());
 
         Set<Test> inTestsForXWiki20 = tests.get("xwiki/2.0").getLeft();
-        Assert.assertEquals(2, inTestsForXWiki20.size());
+        assertEquals(2, inTestsForXWiki20.size());
         Iterator<Test> it = inTestsForXWiki20.iterator();
-        Assert.assertEquals("simple/bold/bold1", it.next().prefix);
-        Assert.assertEquals("simple/italic/italic1", it.next().prefix);
+        assertEquals("simple/bold/bold1", it.next().prefix);
+        assertEquals("simple/italic/italic1", it.next().prefix);
 
         Set<Test> outTestsForXWiki20 = tests.get("xwiki/2.0").getRight();
-        Assert.assertEquals(1, outTestsForXWiki20.size());
-        Assert.assertEquals("simple/bold/bold1", outTestsForXWiki20.iterator().next().prefix);
+        assertEquals(1, outTestsForXWiki20.size());
+        assertEquals("simple/bold/bold1", outTestsForXWiki20.iterator().next().prefix);
 
         Set<Test> inTestsForXWiki21 = tests.get("xwiki/2.1").getLeft();
-        Assert.assertEquals(1, inTestsForXWiki21.size());
-        Assert.assertEquals("simple/italic/italic1", inTestsForXWiki21.iterator().next().prefix);
+        assertEquals(1, inTestsForXWiki21.size());
+        assertEquals("simple/italic/italic1", inTestsForXWiki21.iterator().next().prefix);
 
         Set<Test> outTestsForXWiki21 = tests.get("xwiki/2.1").getRight();
-        Assert.assertEquals(0, outTestsForXWiki21.size());
+        assertEquals(0, outTestsForXWiki21.size());
     }
 
-    @org.junit.Test
-    public void normalize()
+    @org.junit.jupiter.api.Test
+    void normalize()
     {
         ResultExtractor extractor = new ResultExtractor();
         Set<String> testNames = extractor.extractByTestName(this.results);
         Map<String, Pair<Set<Test>, Set<Test>>> tests = extractor.extractBySyntax(this.results);
         extractor.normalize(testNames, tests);
 
-        Assert.assertEquals(2, tests.size());
+        assertEquals(2, tests.size());
 
         Set<Test> inTestsForXWiki20 = tests.get("xwiki/2.0").getLeft();
-        Assert.assertEquals(2, inTestsForXWiki20.size());
+        assertEquals(2, inTestsForXWiki20.size());
         Iterator<Test> it = inTestsForXWiki20.iterator();
-        Assert.assertEquals("simple/bold/bold1", it.next().prefix);
-        Assert.assertEquals("simple/italic/italic1", it.next().prefix);
+        assertEquals("simple/bold/bold1", it.next().prefix);
+        assertEquals("simple/italic/italic1", it.next().prefix);
 
         Set<Test> outTestsForXWiki20 = tests.get("xwiki/2.0").getRight();
         it = outTestsForXWiki20.iterator();
-        Assert.assertEquals(2, outTestsForXWiki20.size());
-        Assert.assertEquals("simple/bold/bold1", it.next().prefix);
-        Assert.assertEquals("simple/italic/italic1", it.next().prefix);
+        assertEquals(2, outTestsForXWiki20.size());
+        assertEquals("simple/bold/bold1", it.next().prefix);
+        assertEquals("simple/italic/italic1", it.next().prefix);
 
         Set<Test> inTestsForXWiki21 = tests.get("xwiki/2.1").getLeft();
         it = inTestsForXWiki21.iterator();
-        Assert.assertEquals(2, inTestsForXWiki21.size());
-        Assert.assertEquals("simple/bold/bold1", it.next().prefix);
-        Assert.assertEquals("simple/italic/italic1", it.next().prefix);
+        assertEquals(2, inTestsForXWiki21.size());
+        assertEquals("simple/bold/bold1", it.next().prefix);
+        assertEquals("simple/italic/italic1", it.next().prefix);
 
         Set<Test> outTestsForXWiki21 = tests.get("xwiki/2.1").getRight();
-        Assert.assertEquals(0, outTestsForXWiki21.size());
+        assertEquals(0, outTestsForXWiki21.size());
     }
-
 }
